Finalized front page design.  Added backgrounds to many pages.

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,5 +1,7 @@
 @import "reset.scss";
 
+//==== COLORS ================================================
+$menuColorPurple: #1E0E1D;
 $easy-color: #499;
 $medium-diff: #994;
 $hard-diff: #949;
@@ -27,9 +29,8 @@ h1 {
 }
 
 h2 {
-   font: 30px/30px 'Open Sans', sans-serif;
+   font: 30px/30px 'Crete Round', sans-serif;
    font-weight: 800;
-   text-transform: uppercase;
    letter-spacing: 1px;
 }
 
@@ -66,6 +67,19 @@ input, textarea {
    font-size: 14px;
    padding: 5px;
    margin: 5px;
+}
+
+//=== ANIMATION =======================================
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fade-in {
+   opacity: 0;
+   -webkit-animation: fadeIn 0.5s linear 9s 1 normal forwards;
+   -moz-animation: fadeIn 0.5s linear 9s 1 normal forwards;
+   animation: fadeIn 0.5s linear 9s 1 normal forwards;
 }
 
 .box{
@@ -149,11 +163,22 @@ input, textarea {
 }
 
 .static-bg {
-   background: url('../img/explore-bg.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
+}
+
+.explore-bg {
+   background: url('../img/bg/explore-bg.jpg') no-repeat center center fixed;
+}
+
+.profile-bg {
+   background: url('../img/bg/profile-bg.jpg') no-repeat center center fixed;
+}
+
+.hike-bg {
+   background: url('../img/bg/hike-bg.jpg') no-repeat center center fixed;
 }
 
 .hero {
@@ -165,13 +190,10 @@ input, textarea {
 .main-logo {
    position: fixed;
    text-align: center;
-   top: 14%;
+   top: 150px;
    left: 50%;
    z-index: 0;
-   margin-left: -200px;
-   h3{
-      padding-top: 10px;
-   }
+   margin-left: -175px;
 }
 
 .layer {
@@ -220,27 +242,14 @@ input, textarea {
    background-image: url('./../img/compressed/parallax8-min.png');
 }
 
-// .floaty {
-//    position: relative;
-//    animation-name: floaty;
-//    animation-duration: 2s;
-//    animation-direction: alternate;
-//    animation-iteration-count: infinite;
-// }
-
-// @keyframes floaty {
-//    from {bottom: 0px;}
-//    to {bottom: 5px;}
-// }
-
 .front-content {
-   height: 855px;
-   background-color: #1E0E1D;
+   background-color: $menuColorPurple;
    color: #eee;
+   height: 550px;
    .main-info {
       position: relative;
       width: 60%;
-      height: 600px;
+      height: 410px;
       margin: 0 auto;
       padding: 50px;
       border: 1px solid #BE453D;
@@ -267,7 +276,17 @@ input, textarea {
          left: 10px;
       }
    }
-   
+}
+
+.little-box-holder {
+   display: flex;
+}
+
+.little-box {
+   margin: 5px;
+   padding: 8px;
+   border: 1px solid #6E202C; 
+   flex: 0 0 30%;
 }
 
 .login-container {
@@ -357,7 +376,6 @@ input, textarea {
    }
 
    .key-image {
-      border: 2px dashed #bbb;
       height: 150px;
    }
 }
@@ -582,4 +600,70 @@ input, textarea {
    display: flex;
    flex-flow: row nowrap;
    align-items: flex-start;
+}
+
+.full-width-box {
+   width: 100%;
+   margin: 10px 0;
+   padding: 15px;
+   border-radius: 3px;
+   background-color: #ddd;
+}
+
+.quote-box {
+   width: 300px;
+   margin-top: 33px;
+   margin-bottom: 10px;
+   padding: 10px 20px 3px 20px;
+   border-top: 1px dashed #ffc8bf;
+   border-bottom: 1px dashed #ffc8bf;
+   text-align: center;
+   .quote {
+      font-size: 18px;
+      font-family: 'Gentium Basic', serif;
+      text-shadow: 0 1px 2px darkred;
+      color: ghostwhite;
+   }
+   .source {
+      font-size: 13px;
+      text-transform: uppercase;
+      color: ghostwhite;
+   }
+}
+
+.scroll-down {
+   text-transform: uppercase;
+   font-size: 14px;
+}
+
+.main-button {
+	-moz-box-shadow:inset 0px 35px 0px -14px #b54b3a;
+	-webkit-box-shadow:inset 0px 35px 0px -14px #b54b3a;
+	box-shadow:inset 0px 35px 0px -14px #b54b3a;
+	background-color:#a73f2d;
+	display:inline-block;
+	color:#ffffff;
+	font-family: "Crete Round", sans-serif;
+	font-size: 18px;
+	padding: 10px 50px;
+	text-decoration: none;
+}
+.main-button:hover {
+	background-color:#b34332;
+
+}
+.main-button:active {
+	position:relative;
+	top:2px;
+}
+
+.footer {
+   height: 50px;
+   text-align: center;
+   background-color: $menuColorPurple;
+   border-top: 1px solid #444;
+   h6 {
+      margin-top: 15px;
+      color: #bcac9c;
+   }
 }
