--- a/public/views/explore.html
+++ b/public/views/explore.html
@@ -1,4 +1,4 @@
-<div class="main-container static-bg">
+<div class="main-container static-bg explore-bg">
    <h2>Explore</h2>
    <div class="hike-filter box">
       <div class="search-filter">
