--- a/public/views/hikeDetails.html
+++ b/public/views/hikeDetails.html
@@ -44,6 +44,28 @@
       </div>
    </div>
    <div>
+   <div>
+      <div>
+         <h4>Write a Review</h4>
+      </div>
+      <div>
+         <div>
+            <div><input placeholder="Review Title"/></div>
+            <select>
+               <option value="1">1</option>
+               <option value="2">2</option>
+               <option value="3">3</option>
+               <option value="4">4</option>
+               <option value="5">5</option>
+               <option value="6">6</option>
+               <option value="7">7</option>
+               <option value="8">8</option>
+               <option value="9">9</option>
+               <option value="10">10</option>
+            </select>
+         </div>
+      </div>
+   </div>
       <review-dir></review-dir>
    </div>
 </div>
