--- a/public/views/footer.html
+++ b/public/views/footer.html
@@ -1,5 +1,5 @@
 <div>
    <div class="footer">
-      <h6>Created by Barry Cann - 2017<h6>
+      <h6>Created by Barry Cann - 2017 :: Inspired by the art from <a href="https://www.camposanto.com/" target="_blank">Team Campo Santo</a><h6>
    </div>
 </div>
