Added findPerfectHike functionality and fixed many bugs

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -60,6 +60,7 @@ input, textarea {
 
 a:link, a:visited, a:hover, a:active {
    color: #eee;
+   text-decoration: none;
 }
 
 //=== ANIMATION =======================================
@@ -159,16 +160,9 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .main-container {
-   margin-top: 80px;
-   padding: 30px 15%;
+   margin: 80px 0 0 0;
+   padding: 20px 15% 30px 15%;
    min-height: 100vh;
-}
-
-.static-bg {
-   -webkit-background-size: cover;
-   -moz-background-size: cover;
-   -o-background-size: cover;
-   background-size: cover;
 }
 
 .explore-bg {
@@ -181,6 +175,13 @@ a:link, a:visited, a:hover, a:active {
 
 .hike-bg {
    background: url('../img/bg/hike-bg.jpg') no-repeat center center fixed;
+}
+
+.static-bg {
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
 }
 
 .hero {
@@ -467,8 +468,8 @@ a:link, a:visited, a:hover, a:active {
       flex: 0 0 85%;
       height: 600px;
       background-color: #599;
-      .hike-title {
-         padding: 10px 0 0 10px;
+      .fit-cover {
+         object-fit: cover;
       }
       .hike-photos {
          display: flex;
@@ -476,9 +477,10 @@ a:link, a:visited, a:hover, a:active {
          align-items: center;
          overflow: hidden;
          img {
-            flex-shrink: 0;
-            min-width: 100%;
-            min-height: 100%;
+            height: 600px
+         }
+         img[class] {
+            width: 100%;
          }
       }
    }
@@ -552,14 +554,6 @@ a:link, a:visited, a:hover, a:active {
          text-align: justify;
       }
    }
-}
-
-.trnspt-grad {
-   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
-   background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-   background: -webkit-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-   background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 .outer-review-box {
