--- a/public/views/explore.html
+++ b/public/views/explore.html
@@ -1,5 +1,5 @@
-<div class="main-container static-bg explore-bg">
-   <h2>Explore</h2>
+<div class="static-bg explore-bg main-container">
+   <h1>Explore</h1>
    <div class="hike-filter box">
       <div class="search-filter">
          <div>
