--- a/public/views/navTemplate.html
+++ b/public/views/navTemplate.html
@@ -1,4 +1,4 @@
-<div class="nav-bar" color-change>
+<div class="nav-bar">
    <div class="left-nav">
       <img ui-sref="home" src="./../img/logo.png"/>
    </div>
