--- a/public/views/reviewFormTemplate.html
+++ b/public/views/reviewFormTemplate.html
@@ -1,19 +1,23 @@
 <div>
    <div class="outer-review-box">
-      <div expand-box>
-            <h3>Write a Review</h3>
+      <div class="full-width-box" expand-box>
+            <br>
+            <h5>Write a Review</h5>
+            <br>
       </div>
-   
    <div class="expandable">
-      <div class="review-image-box">
-         <img class="review-userimage" ng-src="{{user.userimage}}"/>
-         <p>{{user.username}}</p>
-      </div>
-      <div class="review-text-box">
-         <div class="header">
-            <div><input ng-model="review.title" placeholder="Review Title"/></div>
-            <div class="pre-text"><p>Rating:</p></div><div>
-                  <select ng-model="review.reviewrating">
+      <div class="flex-holder">
+         <div class="review-image-box">
+            <img class="review-userimage" ng-src="{{user.userimage}}"/>
+            <p>{{user.username}}</p>
+         </div>
+         <div class="review-text-box">
+            <div class="header">
+               <div>
+                  Title: <input ng-model="review.reviewtitle" placeholder="Review Title"/>
+               </div>
+               <div>Rating: 
+                     <select ng-model="review.reviewrating">
                      <option value="1">1</option>
                      <option value="2">2</option>
                      <option value="3">3</option>
@@ -24,15 +28,16 @@
                      <option value="8">8</option>
                      <option value="9">9</option>
                      <option value="10">10</option>
-                  </select>
+                     </select>
                </div>
-         </div>
+            </div>
          <div>
-            <div><textarea rows="4" ng-model="review.reviewtext" placeholder="Write your review here."></textarea></div>
+               <div><textarea rows="4" cols="25" ng-model="review.reviewtext" placeholder="Write your review here."></textarea></div>
+         </div>
          </div>
       </div>
-      <div>
-            <button>Submit</button>
+      <div class="button-area">
+         <button class="main-button" ng-click="createReview(review)">Submit Review</button>
       </div>
    </div>
 </div>
