--- a/public/views/home.html
+++ b/public/views/home.html
@@ -12,7 +12,7 @@
    <div>
       <img src="./../img/logo.png"/>
    </div>
-   <div class="quote-box">
+   <div class="quote-box brdr-dsh-lt">
       <p class="quote">"The clearest way into the universe <br> is through a forest wilderness."</p>
       <p class="source">John Muir</p>
    </div>
