--- a/public/views/weatherTemplate.html
+++ b/public/views/weatherTemplate.html
@@ -1,4 +1,5 @@
-<div>
+<div class="">
+   <h4>Weather</h4>
    <div class="weather-today">
       <img src="{{weatherInfo.todaylogo}}"/>
       <p><span class="high-temp">{{weatherInfo.todayhigh}}</span> / <span class="low-temp">{{weatherInfo.todaylow}}</span></p>
