--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,11 +1,11 @@
 <div class="main-container static-bg profile-bg">
-   <h1 class="bigger-text light-text">Welcome, {{user.username}}</h1>
    <div class="centered-transparent">
-      <div class="quote-box">
-         <p class="quote">"Live in each season as it passes; breathe the air, drink the drink, taste the fruit, and resign yourself to the influence of the earth."</p>
+      <div class="quote-box brdr-dsh-dk">
+         <p class="quote">" Live in each season as it passes; breathe the air, drink the drink, taste the fruit, and resign yourself to the influence of the earth. "</p>
          <p class="source">Henry David Thoreau</p>
       </div>
    </div>
+   <h1 class="bigger-text light-text">Welcome, {{user.username}}</h1>
    <div class="profile-box">
       <img ng-src="{{user.userimage}}"/><br>
    </div>
